--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="site-header-content">
             
             <h1>Hi, I am Aniket Kumar , <br> I am 23 years old , from Begusarai, India </br></h1>
-            <h3>I am learning Full stack web development , Keep an eye on this space to know about my upcoming projects.</h3>
+            <h3>I am learning Full stack web development , Keep an eye on this space to know about my upcoming projects very soon.</h3>
         </div>
         
 
